--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
+        "@quasar/vite-plugin": "^1.1.1",
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^3.0.0",
         "@vue/server-renderer": "^3.2.31",
@@ -17,8 +18,13 @@
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "sass": "1.32.12",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "@quasar/extras": "^1.15.1",
+        "quasar": "^2.7.7"
     }
 }
