feat: add validation rules

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.15.1",
-        "quasar": "^2.7.7"
+        "quasar": "^2.7.7",
+        "quasar-app-extension-vuelidate-rules": "^0.5.1"
     }
 }
