feat: users CRUB

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
         "spatie/laravel-query-builder": "^5.0",
+        "spatie/url": "^2.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
