--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=QL99
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://admin.ql99.test
+APP_DOMAIN=admin.ql99.test
+API_DOMAIN=api.ql99.test
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -21,6 +23,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=
 
 MEMCACHED_HOST=127.0.0.1
 
