--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
         "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.7",
-        "@inertiajs/server": "^0.1.0",
         "@quasar/vite-plugin": "^1.1.1",
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^3.0.0",
@@ -24,6 +20,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@inertiajs/vue3": "^1.0.11",
         "@quasar/extras": "^1.15.1",
         "pinia": "^2.0.18",
         "quasar": "^2.7.7",
