--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
         "pinia": "^2.0.18",
         "quasar": "^2.7.7",
         "quasar-app-extension-vuelidate-rules": "^0.5.1"
-    }
+    },
+    "version": "0.0.0"
 }
