--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build && vite build --ssr"
+        "build": "vite build"
     },
     "devDependencies": {
-        "@quasar/vite-plugin": "^1.1.1",
-        "@tailwindcss/forms": "^0.5.2",
-        "@vitejs/plugin-vue": "^3.0.0",
-        "@vue/server-renderer": "^3.2.31",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.27",
-        "laravel-vite-plugin": "^0.5.0",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
-        "sass": "1.32.12",
-        "tailwindcss": "^3.1.0",
-        "vite": "^3.0.0",
-        "vue": "^3.2.31"
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
+        "vite": "^4.0.0",
+        "vue": "^3.2.41"
     },
+    "version": "0.0.1",
     "dependencies": {
-        "@inertiajs/vue3": "^1.0.11",
-        "@quasar/extras": "^1.15.1",
-        "pinia": "^2.0.18",
-        "quasar": "^2.7.7",
-        "quasar-app-extension-vuelidate-rules": "^0.5.1"
-    },
-    "version": "0.0.0"
+        "lodash": "^4.17.21"
+    }
 }
