--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@quasar/vite-plugin": "^1.5.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.18",
+        "sass": "^1.32.12",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
     },
     "version": "0.0.1",
     "dependencies": {
-        "lodash": "^4.17.21"
+        "@quasar/extras": "^1.16.6",
+        "lodash": "^4.17.21",
+        "pinia": "^2.1.6",
+        "quasar": "^2.12.7",
+        "vee-validate": "^4.11.6",
+        "yup": "^1.2.0"
     }
 }
